fix: #site width now 80% for better experience on smaller screens

--- a/assets/stylesheets/www.css
+++ b/assets/stylesheets/www.css
@@ -6,6 +6,6 @@ body {
 }
 
 #site {
-  width: 50%;
+  width: 80%;
   margin: 2em auto;
 }
